<resources>
    <string name="app_name">LMCoin</string>
    <string name="app_copy">复制成功</string>
    <string name="app_oprate_failed">操作失败</string>
    <string name="app_oprate_succ">操作成功</string>

    <string name="app_loading_tips">加载中</string>
    <string name="app_loading_empty">什么都没有</string>
    <string name="app_loading_error">加载失败</string>
    <string name="app_loading_retry">重新载入</string>

    <string name="dialog_order">确认下单</string>
    <string name="dialog_order_may_earn">预期盈利：</string>
    <string name="dialog_order_may_lost">预期亏损：</string>
    <string name="dialog_order_set_earnlost">设置止盈止损</string>
    <string name="dialog_order_equal_tips">确认平仓？</string>
    <string name="dialog_order_set_earn">止盈价：</string>
    <string name="dialog_order_set_lost">止损价：</string>
    <string name="dialog_order_type">类型</string>
    <string name="dialog_order_hand">手</string>
    <string name="dialog_order_mutiple">倍</string>
    <string name="dialog_order_safe">保证金</string>
    <string name="dialog_order_service">手续费</string>
    <string name="dialog_order_equal_all">全部平仓</string>
    <string name="dialog_order_equal_mutil">只平多单</string>
    <string name="dialog_order_equal_empty">只平空单</string>
    <string name="dialog_order_market_price">市价</string>
    <string name="dialog_order_fixed_price">限价</string>

    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_know">知道了</string>
    <string name="dialog_wrong">点错了</string>
    <string name="dialog_loginout_tips">确认注销并退出吗?</string>
</resources>
