<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/dialog_order_set_earn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <LinearLayout
            android:background="@drawable/stroke_square_gray"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_remove_1"
                android:layout_width="@dimen/dp_40"
                android:layout_height="wrap_content"
                android:text="-"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"/>
            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="#bbc7ce"/>
            <EditText
                android:id="@+id/et_num_1"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:text="0.16"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:gravity="center"/>
            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="#bbc7ce"/>
            <TextView
                android:id="@+id/tv_add_1"
                android:layout_width="@dimen/dp_40"
                android:layout_height="wrap_content"
                android:text="+"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_value_1"
        android:text="@string/dialog_order_may_earn"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/dialog_order_set_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
        <LinearLayout
            android:background="@drawable/stroke_square_gray"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_remove_2"
                android:layout_width="@dimen/dp_40"
                android:layout_height="wrap_content"
                android:text="-"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"/>
            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="#bbc7ce"/>
            <EditText
                android:id="@+id/et_num_2"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:text="0.16"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:gravity="center"/>
            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="#bbc7ce"/>
            <TextView
                android:id="@+id/tv_add_2"
                android:layout_width="@dimen/dp_40"
                android:layout_height="wrap_content"
                android:text="+"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_value_2"
        android:text="@string/dialog_order_may_earn"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>